# payloadDrop

./: README.md
esp32_payload/: README.md  esp32_payload.ino
src/payload_ground_stack/: package.xml  setup.cfg  setup.py
src/payload_ground_stack/launch/: stack.launch.py  stack_2servo.launch.py
src/payload_ground_stack/payload_ground_stack/: attitude_controller_node.py  guidance_node.py  mixer4_node.py  mixer4_node_x.py  mixer_node.py  nav_here.py  nav_to.py  nav_to_ned.py  payload_mav_bridge.py
