<?xml version="1.0"?>
<package format="3">
  <name>payload_ground_stack</name>
  <version>0.2.0</version>
  <description>ROS 2 ground stack for payload (MAVLink bridge + guidance/PID/mixers)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
